# runpod_tts

./: .gitignore  README.md  pyproject.toml  requirements.txt  sql_app.db
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: api_keys.py  auth.py  tts.py  voices.py
app/core/: config.py  security.py
app/db/: init_db.py
app/media/voices/cache/: example.pkl
app/models/: api_key.py  tts.py  user.py  voice.py
app/services/: voice_processor.py
docker/preprocess/: .dockerignore  Dockerfile  preprocess_handler.py  test_input.json
